--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.39.1",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-dialog": "^1.1.10",
@@ -30,14 +31,18 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "jose": "^6.0.11",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.501.0",
     "next": "15.1.7",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "6.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
