--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "build": {
       "env": {
-        "DATABASE_URL": "@DIRECT_DATABASE_URL"
+        "DATABASE_URL": "$DIRECT_DATABASE_URL"
       }
     }
   }
