--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate --no-engine && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate && prisma migrate deploy"
@@ -24,7 +24,7 @@
     "@auth/core": "^0.39.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.1.1",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.11.1",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.10",
@@ -46,6 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "edge": "link:@prisma/client/edge",
     "jose": "^6.0.11",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.501.0",
@@ -75,7 +76,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
-    "prisma": "^6.8.2",
+    "prisma": "^6.11.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
